force-app/main/default/objects/Income__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Income</relationshipLabel>
    <relationshipName>Income</relationshipName>
    <type>Lookup</type>
</CustomField>