force-app/main/default/objects/Income__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paycheck</fullName>
            </value>
            <value>
                <fullName>Rental Income</fullName>
            </value>
            <value>
                <fullName>Devident</fullName>
            </value>
            <value>
                <fullName>Capital Gain</fullName>
            </value>
            <value>
                <fullName>Capital Lost</fullName>
            </value>
            <value>
                <fullName>Intrest</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>