force-app/main/default/objects/Income__c/fields/Source_Account__c.field-meta.xml
<CustomField>
    <fullName>Source_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Income Source Account</description>
    <label>Source Account</label>
    <referenceTo>Account__c</referenceTo>
    <relationshipLabel>Income (Source Account)</relationshipLabel>
    <relationshipName>Income1</relationshipName>
    <type>Lookup</type>
</CustomField>