force-app/main/default/objects/Income__c/fields/Source_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Account_Name__c</fullName>
    <formula>Source_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Account Name</label>
    <type>Text</type>
</CustomField>