force-app/main/default/objects/Income__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Source_Account__c</columns>
    <columns>Source__c</columns>
    <columns>Account__c</columns>
    <columns>Amount__c</columns>
    <columns>Category__c</columns>
    <columns>Date__c</columns>
    <columns>Paid__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>