force-app/main/default/objects/Income__c/listViews/CCB.listView-meta.xml
<ListView>
    <fullName>CCB</fullName>
    <columns>NAME</columns>
    <columns>Source_Account__c</columns>
    <columns>Source__c</columns>
    <columns>Account__c</columns>
    <columns>Amount__c</columns>
    <columns>Category__c</columns>
    <columns>Date__c</columns>
    <columns>Paid__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source_Account_Name__c</field>
        <operation>equals</operation>
        <value>Child Care Benefits</value>
    </filters>
    <label>Child Care Benefits</label>
</ListView>