force-app/main/default/objects/Income__c/listViews/Investment.listView-meta.xml
<ListView>
    <fullName>Investment</fullName>
    <columns>NAME</columns>
    <columns>Source_Account__c</columns>
    <columns>Source__c</columns>
    <columns>Account__c</columns>
    <columns>Amount__c</columns>
    <columns>Category__c</columns>
    <columns>Date__c</columns>
    <columns>Paid__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>Devident</value>
    </filters>
    <label>Investment</label>
</ListView>